create DOM for player one

--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
 	<div id="app">
 		<div class="main-container">
 			<span id="getStarted">
+				<div class="jumbotron col-sm-12 text-center" style="background: none;">
+					<h1>Github Battle</h1>
+					<p class="lead"> Some battles are worth fighting ; )</p>
+					<a href="#"><button type="button" class="btn btn-lg btn-success" id="startedBtn">Get
+							Started</button></a>
+				</div>
+			</span>
+
+			<span style="display: none;" id="playerOne">
+				<div class="jumbotron col-sm-12 text-center" style="background: none;">
+					<h1>Player One</h1>
+					<div class="col-sm-8 col-sm-offset-2">
+						<form>
+							<div class="form-group"><input type="text" class="form-control"
+									placeholder="Github Username" value="" id="playerOneInput"></div>
+							<div class="form-group col-sm-4 col-sm-offset-4"><button class="btn btn-block btn-success"
+									type="button" id="playerOneBtn">Continue</button></div>
+						</form>
+					</div>
+				</div>
+			</span>
+
+			
 		</div>
 
 	</div>
