--- a/index.html
+++ b/index.html
@@ -32,7 +32,20 @@
 				</div>
 			</span>
 
-			
+			<span style="display: none;" id="playerTwo">
+				<div class="jumbotron col-sm-12 text-center" style="background: none;">
+					<h1>Player two</h1>
+					<div class="col-sm-8 col-sm-offset-2">
+						<form>
+							<div class="form-group"><input type="text" class="form-control"
+									placeholder="Github Username" value="" id="playerTwoInput"></div>
+							<div class="form-group col-sm-4 col-sm-offset-4"><button class="btn btn-block btn-success"
+									type="button" id="playerTwoBtn">Continue</button></div>
+						</form>
+					</div>
+				</div>
+			</span>
+
 		</div>
 
 	</div>
