add js to select all dom elements

--- a/index.html
+++ b/index.html
@@ -53,4 +53,17 @@
 </body>
 
 </html>
+<script>
+	const startedBtn = document.getElementById("startedBtn"),
+		playerOne = document.getElementById("playerOne"),
+		playerOneBtn = document.getElementById("playerOneBtn"),
+		playerTwoBtn = document.getElementById("playerTwoBtn"),
+		getStartedDiv = document.getElementById("getStarted"),
+		playerOneInput = document.getElementById("playerOneInput"),
+		playerTwoInput = document.getElementById("playerTwoInput")
+	playerTwo = document.getElementById("playerTwo");
+
+
+</script>
+
 
