add scripts to select dom elements

--- a/Results.html
+++ b/Results.html
@@ -107,3 +107,27 @@
 </body>
 
 </html>
+
+<script>
+	const initiateBtn = document.getElementById("initiateBtn"),
+		playerOneName = document.getElementById("playerOneName"),
+		playerOneRepos = document.getElementById("playerOneRepos"),
+		playerOneUserName = document.getElementById("playerOneUserName"),
+		playerOneImg = document.getElementById("playerOneImg"),
+		playerOneLocation = document.getElementById("playerOneLocation"),
+		playerOneFollowing = document.getElementById("playerOneFollowing"),
+		playerOneFollowers = document.getElementById("playerOneFollowers"),
+		playerOneBlog = document.getElementById("playerOneBlog"),
+		playerOneCompany = document.getElementById("playerOneCompany"),
+		playerTwoName = document.getElementById("playerTwoName"),
+		playerTwoRepos = document.getElementById("playerTwoRepos"),
+		playerTwoUserName = document.getElementById("playerTwoUserName"),
+		playerTwoImg = document.getElementById("playerTwoImg"),
+		playerTwoLocation = document.getElementById("playerTwoLocation"),
+		playerTwoFollowing = document.getElementById("playerTwoFollowing"),
+		playerTwoFollowers = document.getElementById("playerTwoFollowers"),
+		playerTwoBlog = document.getElementById("playerTwoBlog"),
+		playerTwoCompany = document.getElementById("playerTwoCompany"),
+
+		
+</script>
